--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             align-items: center; /* Centers content vertically */
             height: 100vh; /* Sets the height of the body to cover the full viewport height */
             font-family: 'Poppins', sans-serif; /* Sets the font family for the body */
-            background: #f0f0f0; /* Sets the background color to light gray */
+            background: #3a3a3a; /* Sets the background color to light gray */
         }
         h1 {
             margin-bottom: 50px; /* Spacing below the header */
