--- a/ABR002.html
+++ b/ABR002.html
@@ -10,17 +10,17 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #3a3a3a; /* Set the entire background to grey */
-            color: #D3D3D3; /* Light grey text color for body */
+            background-color: #3a3a3a;
+            color: #D3D3D3;
         }
         .navbar {
-            background-color: #4B4B4B; /* Darker grey background for the navbar */
+            background-color: #4B4B4B;
             overflow: hidden;
         }
         .navbar a {
             float: left;
             display: block;
-            color: #f2f2f2; /* Light grey text color for navbar links */
+            color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
             text-decoration: none;
@@ -33,7 +33,7 @@
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
-            background-color: #4B4B4B; /* Container background is also grey */
+            background-color: #4B4B4B;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
@@ -45,12 +45,12 @@
         h2 {
             font-size: 18px;
             color: #D3D3D3;
-            margin-top: 20px;
+            margin-top: 40px;
         }
         p, ul {
             font-size: 16px;
             line-height: 1.6;
-            color: #D3D3D3; /* Light grey text color for paragraph and list */
+            color: #D3D3D3;
         }
         ul {
             list-style-type: none;
