--- a/index.html
+++ b/index.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
-<!-- Declaration of document type as HTML5 -->
 <html>
 <head>
-    <!-- Start of the head section which contains metadata and links to stylesheets -->
     <title>Aberration Research Institute</title>
-    <!-- Sets the title of the webpage shown in the browser tab -->
-
-    <!-- Link to Google Fonts to import the 'Poppins' font with specified weights -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    
     <style>
-        /* Internal CSS starts here */
         body {
-            display: flex; /* Establishes a flex container for center alignment */
-            justify-content: center; /* Centers content horizontally */
-            align-items: center; /* Centers content vertically */
-            height: 100vh; /* Sets the height of the body to cover the full viewport height */
-            font-family: 'Poppins', sans-serif; /* Sets the font family for the body */
-            background: #3a3a3a; /* Sets the background color to light gray */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: 'Poppins', sans-serif;
+            background: #3a3a3a;
+            margin-top: 10px; /* Reduced margin-top to move content up */
         }
         h1 {
-            margin-bottom: 50px; /* Spacing below the header */
-            font-size: 6.5em; /* Sets the size of the header text */
-            text-align: center; /* Centers the header text horizontally */
-            font-weight: 400; /* Specifies the font weight (thin) */
+            margin-bottom: 50px;
+            font-size: 6.5em;
+            text-align: center;
+            font-weight: 400;
+        }
+        h2 {
+            font-size: 1.625em; /* Half the size of the previous h2 */
+            text-align: center;
+            font-weight: 400;
         }
         .enter-button {
-            display: block; /* Makes the button a block element */
-            margin: 0 auto; /* Centers the button horizontally */
-            padding: 20px 35px; /* Sets the padding inside the button for width and height */
-            font-size: 1.5em; /* Sets the text size within the button */
-            background-color: #333333; /* Button background color */
-            color: black; /* Text color for the button */
-            border: none; /* No border for the button */
-            cursor: pointer; /* Changes the cursor to a pointer when hovering over the button */
-            border-radius: 12px; /* Rounded corners of the button */
+            display: block;
+            margin: 0 auto;
+            padding: 20px 35px;
+            font-size: 1.5em;
+            background-color: #333333;
+            color: black;
+            border: none;
+            cursor: pointer;
+            border-radius: 12px;
         }
         .enter-button:hover {
-            background-color: #4d4d4d; /* Changes background color on hover */
+            background-color: #4d4d4d;
         }
     </style>
 </head>
 <body>
-    <!-- Body section containing the main content -->
     <div>
-        <h1>Aberration Research Institute</h1> <!-- Main heading -->
+        <h2>In the Darkness of the Night, We Stand Guard</h2>
+        <h1>Aberration Research Institute</h1>
         <button class="enter-button" onclick="location.href='homepage.html'">Enter</button>
-        <!-- Button for entering the site, with an onclick event to redirect to the homepage -->
     </div>
 </body>
 </html>
