--- a/ABR002.html
+++ b/ABR002.html
@@ -46,7 +46,10 @@
             font-size: 18px;
             color: #D3D3D3;
             margin-top: 40px;
-        }
+            margin-bottom: -10px; /* Adjust this value to bring the following text closer */
+            border-bottom: 1px solid #666; /* This creates the line */
+            padding-bottom: 2px; /* Adjust this value to bring the line closer to the text */
+}
         p, ul {
             font-size: 16px;
             line-height: 1.6;
