--- a/ABR002.html
+++ b/ABR002.html
@@ -106,6 +106,8 @@
 
         <h2>Additional Notes</h2>
         <p>ABR-002's ability to move inconspicuously in low-light conditions presents a significant risk to containment integrity. Continuous research into ABR-002's properties and potential countermeasures is imperative to ensure the safety of all ARI personnel and facilities. Enhanced lighting and surveillance protocols are to be reviewed and updated regularly based on new findings.</p>
+
+        <h1>END OF DOCUMENT</h1>
     </div>
 </body>
 </html>
