--- a/ABR001.html
+++ b/ABR001.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>ABR-002 - Aberration Research Institute</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aberration Document - Aberration Research Institute</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
-            color: #000000; /* Set text color to black */
+            background-color: #3a3a3a;
+            color: #D3D3D3;
         }
         .navbar {
-            background-color: #1a1a1a;
+            background-color: #4B4B4B;
             overflow: hidden;
         }
         .navbar a {
@@ -24,64 +26,86 @@
             text-decoration: none;
         }
         .navbar a:hover {
-            background-color: #ddd;
+            background-color: #464646;
             color: black;
         }
         .container {
             padding: 20px;
-            background-color: #fff; /* Light background for the main container */
             margin: 20px auto;
-            max-width: 800px; /* Sets a max width for the container */
-            border-radius: 10px; /* Rounded corners for the container */
-            box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Soft shadow around the container */
+            max-width: 800px;
+            background-color: #4B4B4B;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
-        h1, h2 {
-            text-align: center;
+        h1 {
+            font-size: 22px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
+        }
+        h2 {
+            font-size: 18px;
+            color: #D3D3D3;
+            margin-top: 40px;
+            margin-bottom: -10px; /* Adjust this value to bring the following text closer */
+            border-bottom: 1px solid #666; /* This creates the line */
+            padding-bottom: 2px; /* Adjust this value to bring the line closer to the text */
         }
         p, ul {
+            font-size: 16px;
             line-height: 1.6;
+            color: #D3D3D3;
         }
         ul {
-            padding-left: 20px; /* Add padding to list for better formatting */
+            list-style-type: none;
+            padding-left: 0;
+        }
+        li {
+            padding: 5px 0;
         }
     </style>
 </head>
 <body>
     <div class="navbar">
         <a href="homepage.html">Home</a>
-        <a href="aberrations.html">Aberrations Index</a>
+        <a href="ABRlist.html">Aberrations Index</a>
         <a href="about.html">About</a>
         <a href="research.html">Research</a>
         <a href="contact.html">Contact</a>
     </div>
 
     <div class="container">
-        <h1>ABR-002: Voidshadow</h1>
-        <h2>General Information</h2>
-        <p><strong>Aberration Designation:</strong> ABR-002</p>
-        <p><strong>Threat Level:</strong> Critical (CR)</p>
-        <p><strong>Containment Level:</strong> Gamma-2</p>
+        <h1>ABERRATION DOCUMENT: ABR-001</h1>
+        <p><strong>Aberration Designation:</strong> ABR-001</p>
+        <p><strong>Codename:</strong> Nephological Entity</p>
+        <p><strong>Threat Level:</strong> Class IV: Critical</p>
+        <p><strong>Containment Level:</strong> Delta-2</p>
 
         <h2>Description</h2>
-        <p>ABR-002, designated "Voidshadow," manifests as a dynamic, fluid-like mass of darkness, approximately 2 meters in height. This entity exhibits unusual optical properties, allowing it to blend seamlessly into low-light environments. It appears as a shifting void, absorbing light and making it nearly invisible in dark settings.</p>
+        <p>ABR-001, codenamed "Nephological Entity," is a humanoid entity standing approximately 1.8 meters in height, comprised entirely of densely packed cloud formations that constantly shift and change. It resembles a towering cumulonimbus cloud, with its form subtly altering to reflect its mood and intentions. Despite its ethereal composition, the Nephological Entity can interact with physical objects, altering its size, density, and weather-creating capabilities. Its abilities range from creating light cirrus clouds to powerful cumulonimbus thunderstorms. The entity's mood directly influences the type of weather phenomena it manifests, which can include rain, snow, hail, and lightning.</p>
+        <p>The Nephological Entity communicates through changes in its cloud formations and colorations, a visual language that ARI has partially deciphered, allowing for basic interaction.</p>
 
-        <h2>Behavior and Cognitive Capacity</h2>
-        <p>ABR-002 displays advanced cognitive abilities, including strategic planning and high-level problem-solving skills. Its behavior suggests a malevolent intelligence, capable of manipulating its environment and those within it to achieve its goals.</p>
+        <h2>Containment Protocols</h2>
+        <p>The Nephological Entity is contained within a specialized facility at ARI's global headquarters. The containment cell is equipped with advanced climate control technology to simulate various weather conditions, providing a conducive environment that helps regulate the entity's capabilities. A robust Faraday cage surrounds the cell to protect against electrical discharges. Continuous monitoring is conducted by ARI personnel with Level 3 clearance or higher. All changes in behavior or atmospheric composition must be documented and reported immediately to the ARI Director.</p>
 
-        <h2>Neurological Disruption</h2>
-        <p>Upon physical contact with a host, ABR-002 disrupts neurological functions, leading to significant behavioral changes. Affected individuals exhibit altered behavior patterns, often appearing as though under external control. Symptoms include heightened aggression, loss of free will, and susceptibility to external influences, suggesting a form of possession or mind control.</p>
+        <h2>Risk Assessment</h2>
+        <p>The Nephological Entity poses a significant risk due to its ability to generate severe weather conditions based on its emotional state. Distress can lead to dangerous phenomena such as intense thunderstorms and electrical discharges. The entity's unpredictability necessitates rigorous containment protocols to protect ARI personnel and infrastructure.</p>
 
-        <h2>Containment Procedures</h2>
+        <h2>Behavioral Analysis</h2>
+        <p>The entity exhibits a range of behaviors linked to its emotional state, with calm periods marked by benign weather patterns and distress leading to severe weather events. Initial interactions have demonstrated the entity's ability to understand and respond to visual cues, although sudden changes in mood can result in hazardous conditions.</p>
+
+        <h2>Appendices</h2>
+        <p><strong>Background:</strong></p>
+        <p>The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
+        <p><strong>Incident Report #001:</strong></p>
+        <p>During an initial communication attempt, Doctor ████ and Researcher ████ were injured by an electrical discharge caused by the entity's distress. Both sustained burns and required medical treatment. This incident led to the integration of a Faraday cage within the containment cell and revised communication strategies to prevent future distress.</p>
+        <p><strong>Containment Protocol Revision:</strong></p>
         <ul>
-            <li><strong>Location:</strong> ABR-002 is to be contained in a 5m x 5m x 5m chamber constructed of non-reflective, high-density polymer, designed to absorb any light within the containment area.</li>
-            <li><strong>Lighting:</strong> The chamber must remain brightly lit at all times to prevent ABR-002 from effectively camouflaging itself. Light levels should be no less than 10,000 lumens.</li>
-            <li><strong>Surveillance:</strong> 24/7 surveillance is mandatory, with at least two personnel monitoring the live feed at all times. Infrared and ultraviolet cameras are to be used to detect ABR-002's presence.</li>
-            <li><strong>Access Restrictions:</strong> Only personnel with Clearance Level 4 (C4) or higher may enter the containment chamber. Entry is permitted only for essential maintenance or research, and personnel must wear full-body reflective suits to minimize physical contact.</li>
+            <li><strong>Faraday Cage:</strong> Added to prevent electrical discharges.</li>
+            <li><strong>Emotional Intelligence Training:</strong> Required for all personnel interacting with the entity to reduce potential distress triggers.</li>
+            <li><strong>Emergency Evacuation Directive:</strong> Established for swift evacuation in case of increased distress signals.</li>
         </ul>
 
-        <h2>Incident Log ABR-002-01</h2>
-        <p>Date: ██/██/████</p>
-        <p>Summary: During a routine containment check, Researcher ██████ made contact with ABR-002. Within minutes, the researcher exhibited signs of neurological disruption, including uncharacteristic aggression and attempts to sabotage containment protocols. Immediate intervention by security personnel prevented further breach. Researcher ██████ was quarantined for observation and later terminated to prevent further contamination.</p>
+        <h1>END OF DOCUMENT</h1>
     </div>
 </body>
 </html>
