--- a/about.html
+++ b/about.html
@@ -30,10 +30,6 @@
             background-color: #464646;
             color: black;
         }
-        .navbar a.contact {
-            background-color: #59A3C4;
-            color: #ffffff;
-        }
         .container {
             padding: 40px;
             margin: 20px auto;
@@ -78,6 +74,13 @@
         .team-member p {
             margin: 0;
         }
+        .contact {
+            color: #59A3C4;
+            text-decoration: none;
+        }
+        .contact:hover {
+            text-decoration: underline;
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -93,7 +96,7 @@
         <a href="ABRlist.html">Aberrations Index</a>
         <a href="about.html">About</a>
         <a href="research.html">Research</a>
-        <a href="contact.html" class="contact">Contact</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <div class="container">
