--- a/homepage.html
+++ b/homepage.html
@@ -62,23 +62,6 @@
             text-align: center;
             font-size: 1.2em;
         }
-        .team-member {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-        .team-member img {
-            border-radius: 50%;
-            margin-right: 20px;
-        }
-        .team-member h3 {
-            margin: 0;
-            font-size: 1.5em;
-        }
-        .team-member p {
-            margin: 5px 0;
-            font-size: 1.2em;
-        }
         footer {
             text-align: center;
             padding: 20px;
@@ -99,44 +82,21 @@
 
     <div class="container">
         <h1>Welcome to Aberration Research Institute</h1>
-        <p>This is the homepage of the Aberration Research Institute. Here, you can find information about our research, team, and contact details.</p>
+        <p>Welcome to the Aberration Research Institute (ARI), where we delve into the unknown, investigate the mysterious, and secure the extraordinary.</p>
 
         <div class="section" id="mission">
             <h2>Our Mission</h2>
-            <p>The Aberration Research Institute (ARI) is dedicated to the investigation, research, understanding, and secure containment of anomalies, phenomena, and entities collectively referred to as "Aberrations." Our mission is to protect humanity from these unknown threats while advancing scientific knowledge.</p>
+            <p>At ARI, our mission is to investigate, research, understand, and securely contain anomalies, phenomena, and entities collectively referred to as "Aberrations." We aim to protect humanity from these unknown threats while advancing scientific knowledge.</p>
         </div>
 
-        <div class="section" id="team">
-            <h2>Our Team</h2>
-            <div class="team-member">
-                <img src="director.jpg" alt="Director of ARI" width="100" height="100">
-                <div>
-                    <h3>Dr. ███████ ██████</h3>
-                    <p>Director of ARI</p>
-                    <p>Dr. ███████ ██████ has been leading ARI for over two decades, bringing unparalleled expertise in anomaly research and containment strategies.</p>
-                </div>
-            </div>
-            <div class="team-member">
-                <img src="chief_research_officer.jpg" alt="Chief Research Officer" width="100" height="100">
-                <div>
-                    <h3>Dr. █████ █████</h3>
-                    <p>Chief Research Officer</p>
-                    <p>With a background in theoretical physics and metaphysics, Dr. █████ heads ARI's research division, pushing the boundaries of our understanding of aberrations.</p>
-                </div>
-            </div>
-            <div class="team-member">
-                <img src="head_field_operations.jpg" alt="Head of Field Operations" width="100" height="100">
-                <div>
-                    <h3>Agent ████ █████</h3>
-                    <p>Head of Field Operations</p>
-                    <p>Agent ████ leads ARI's containment and response teams, ensuring that all field operations are executed with precision and safety.</p>
-                </div>
-            </div>
+        <div class="section" id="vision">
+            <h2>Our Vision</h2>
+            <p>We aspire to establish ARI as the foremost authority on aberrations worldwide, setting the standard for research, containment, and ethical engagement with these unparalleled phenomena.</p>
         </div>
 
-        <div class="section" id="research">
-            <h2>Our Research</h2>
-            <p>ARI conducts extensive research on various aberrations, aiming to understand their origins, properties, and potential threats. Our research is published in leading scientific journals and contributes to the global knowledge base on anomalous phenomena.</p>
+        <div class="section" id="approach">
+            <h2>Our Approach</h2>
+            <p>We operate independently and discreetly, employing a tiered and systematic approach to investigate and contain aberrations. Our research is rooted in scientific rigor and ethical standards, ensuring a balance between exploration and safety.</p>
         </div>
 
         <div class="section" id="contact">
