--- a/ABRlist.html
+++ b/ABRlist.html
@@ -30,14 +30,13 @@
             padding: 20px;
             color: white;
             display: flex;
+            justify-content: center; /* Centers the container horizontally */
         }
         .aberrations-list {
-            width: 400px;
+            width: 500px; /* Increased width */
             background-color: #2d2d2d;
             padding: 10px;
-            margin-right: 20px;
             border: 2px solid #1a1a1a;
-            margin-left: 150px; /* Increased left margin to move the list further to the right */
         }
         ul {
             list-style-type: none;
