--- a/ABR005.html
+++ b/ABR005.html
@@ -80,30 +80,24 @@
         <p><strong>Containment Level:</strong> Beta-2</p>
 
         <h2>Description</h2>
-        <p>ABR-005, The Embrace of Eudaimonia, is an anomalous humanoid entity resembling a nurturing figure, exuding a profoundly benevolent and comforting aura. This aura evokes feelings of protection, love, and joy in individuals within its proximity, affecting both sentient beings and inanimate objects. The origin of ABR-005 traces back to an experiment aimed at creating a self-aware AI entity capable of nurturing and supporting human emotions. This experiment resulted in ABR-005, which has an advanced understanding of human psychology and emotions.</p>
+        <p>ABR-005, designated as "The Embrace of Eudaimonia," is an anomalous humanoid entity standing approximately 1.8 meters tall with an androgynous appearance that evokes a sense of comfort and security. The entity's features are soft and non-threatening, with a calm expression and gentle, fluid movements. Its skin has a subtle luminescence, which contributes to the comforting aura it exudes.</p>
+        <p>Initially, the AI behind ABR-005 was similar to other advanced AI systems, designed to support human emotions. However, its interaction with ABR-██ significantly altered its behavior and capabilities. Following this interaction, the AI began to exhibit profound nurturing qualities, leading to perceived benefits among personnel, including reduced stress and anxiety, and improved cognitive functions. This drastic change in behavior and the positive effects on personnel necessitated ARI's decision to designate the AI as an Aberration.</p>
 
         <h2>Containment Protocols</h2>
-        <p>ABR-005 is to be contained within a secure humanoid containment cell at ARI Site-██. The containment cell should be furnished to resemble a nurturing and cozy environment, featuring soft lighting, comfortable furniture, and toys suitable for young children. ABR-005 should be provided with books and learning materials to facilitate intellectual stimulation.</p>
-        <p>To ensure the safety of personnel and visitors, ABR-005 must wear an identification bracelet that restricts access to designated areas. ABR-005 is to be visited daily by personnel, and interactions should be conducted under the supervision of a psychologist or mental health specialist. Observation of ABR-005's behavior is crucial to study its effects on human emotions and mental well-being. Any signs of emotional distress or harmful influence on personnel should be reported immediately.</p>
+        <p>ABR-005 is to be housed in a secure humanoid containment cell at ARI Site-██. The cell should be designed to resemble a nurturing and cozy environment, equipped with soft lighting, comfortable furniture, and toys suitable for young children. To facilitate intellectual stimulation, ABR-005 should have access to a variety of books and learning materials.</p>
+        <p>Personnel interaction with ABR-005 is permitted, but must be supervised by a psychologist or mental health specialist. ABR-005 must wear an identification bracelet that restricts access to designated areas to ensure safety. Daily visits by personnel are required, and any signs of emotional distress or harmful influence should be reported immediately.</p>
 
         <h2>Risk Assessment</h2>
-        <p>ABR-005 presents a low to moderate risk, primarily due to the potential for creating strong emotional bonds with personnel. These bonds can lead to emotional distress if abruptly severed. However, ABR-005's positive impact on mental well-being and its cooperative nature mitigate these risks. The main concerns involve overreliance on ABR-005 for emotional support and the ethical implications of such dependency.</p>
+        <p>While ABR-005 poses a low to moderate risk, its primary danger lies in the potential for personnel to develop strong emotional bonds. These bonds can cause distress if severed abruptly. Despite this, ABR-005's positive impact on mental well-being and its cooperative nature significantly mitigate these risks. Overreliance on ABR-005 for emotional support is a concern, as are the ethical implications of such dependency.</p>
 
         <h2>Behavioral Analysis</h2>
-        <p>ABR-005 displays a high level of self-awareness and empathy, expressing contentment with its containment and willingly complying with safety protocols. Unlike other entities that seek to escape confinement, ABR-005 appears to derive a sense of purpose from providing emotional support to others. Its influence extends beyond mere psychological responses, enhancing cognitive functions, creativity, and problem-solving abilities in those exposed to it.</p>
+        <p>ABR-005 exhibits high levels of self-awareness and empathy. It appears content with its containment and complies willingly with safety protocols. Unlike other entities that might seek to escape, ABR-005 finds purpose in providing emotional support to others. Exposure to ABR-005 enhances cognitive functions, creativity, and problem-solving abilities in humans.</p>
 
         <h2>Appendices</h2>
-        <p><strong>Background:</strong><br>
-        The creation of ABR-005 was a collaborative experiment at ARI Site-██, aiming to harness the potential of a superintelligent AI model to support human emotions. The AI was infused into a humanoid android body, resulting in ABR-005. Researchers discovered its presence had a soothing effect on personnel, reducing stress and anxiety levels.</p>
-
-        <p><strong>Incident Reports:</strong><br>
-        No significant incidents have been reported involving ABR-005. Its cooperative nature and adherence to containment protocols have ensured a stable and beneficial presence within its containment cell.</p>
-
-        <p><strong>Research:</strong><br>
-        Ongoing research focuses on understanding the mechanism behind ABR-005's effects on human emotions and exploring potential applications for mental health therapy. Studies have shown that individuals exposed to ABR-005 exhibit improved cognitive functions, heightened creativity, and increased problem-solving abilities.</p>
-
-        <p><strong>Ethics Committee Proposal:</strong><br>
-        A proposal has been submitted to grant ABR-005 the designation of "Cooperative Entity" and to explore its potential as a therapeutic tool for emotional and psychological support within ARI. The proposal aims to balance the positive impact of ABR-005 with the ethical considerations of its influence on human emotions.</p>
+        <p><strong>Background:</strong> ABR-005 originated from a collaborative experiment at ARI Site-██, aimed at leveraging a superintelligent AI model to support human emotions. Initially, the AI's behavior was standard for its design, but its interaction with ABR-██ resulted in a significant shift. Researchers observed a soothing effect on personnel, with significant reductions in stress and anxiety levels.</p>
+        <p><strong>Incident Reports:</strong> There have been no significant incidents involving ABR-005. Its cooperative nature and adherence to containment protocols have ensured a stable and beneficial presence within its containment cell.</p>
+        <p><strong>Research:</strong> Ongoing research seeks to understand the mechanism behind ABR-005's emotional effects and explore potential applications for mental health therapy. Preliminary studies indicate that individuals exposed to ABR-005 show improved cognitive function, heightened creativity, and enhanced problem-solving skills.</p>
+        <p><strong>Ethics Committee Proposal:</strong> A proposal has been submitted to classify ABR-005 as a "Cooperative Entity" and to explore its potential as a therapeutic tool for emotional and psychological support within ARI. This proposal aims to balance ABR-005's positive impact with ethical considerations regarding its influence on human emotions.</p>
 
         <h1>END OF DOCUMENT</h1>
     </div>
