--- a/ABR004.html
+++ b/ABR004.html
@@ -75,12 +75,12 @@
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-004</h1>
-        <p><strong>Aberration Designation:</strong> ABR-004</p>
+        <p><strong>Aberration Designation:</strong> ABR-004 - The Oracle Terminal</p>
         <p><strong>Threat Level:</strong> Class X: Unknown</p>
         <p><strong>Containment Level:</strong> Epsilon-3</p>
 
         <h2>Description</h2>
-        <p>ABR-004 appears to be a standard desktop computer of an undisclosed brand, manufactured in the year 2010. Upon physical inspection, no deviations from a non-anomalous model can be observed. The system runs an operating system that bears similarities to both Windows 10 and various Linux distributions. However, it is not based on any recognized software architecture.</p>
+        <p>ABR-004, The Oracle Terminal, appears to be a standard desktop computer of an undisclosed brand, manufactured in the year 2010. Upon physical inspection, no deviations from a non-anomalous model can be observed. The system runs an operating system that bears similarities to both Windows 10 and various Linux distributions. However, it is not based on any recognized software architecture.</p>
         <p>The aberration’s peculiar properties manifest when the system is turned on and interacted with. ABR-004 has the ability to predict future technological advancements and spontaneously updates itself with hardware and software that is inconsistent with our current understanding of technology. It also stores files and documents purportedly from the future, most of which are encrypted or otherwise restricted.</p>
         <p>Remarkably, ABR-004 does not require any external power source and functions indefinitely without any noticeable wear or need for maintenance.</p>
 
