--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             text-align: center;
             font-weight: 400;
         }
-        .enter-button {
-            display: none; /* Hide the button initially */
-            margin: 0 auto;
+        .enter-button, .submit-button {
+            display: block;
+            margin: 20px auto;
             padding: 20px 35px;
             font-size: 1.5em;
             background-color: #333333;
@@ -35,7 +35,7 @@
             cursor: pointer;
             border-radius: 12px;
         }
-        .enter-button:hover {
+        .enter-button:hover, .submit-button:hover {
             background-color: #4d4d4d;
         }
         .password-input {
@@ -60,10 +60,10 @@
 </head>
 <body>
     <div>
-        <h2>In the Darkness of the Night, We Stand Guard</h2>
+        <h2>Where the Unseen Threatens, We Stand Unyielding.</h2>
         <h1>Aberration Research Institute</h1>
         <input type="password" id="password" class="password-input" placeholder="Enter Password">
-        <button onclick="checkPassword()">Submit</button>
+        <button class="submit-button" onclick="checkPassword()">Submit</button>
         <button id="enter-button" class="enter-button" onclick="location.href='homepage.html'">Enter</button>
     </div>
 </body>
