--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div>
-        <h2>In the Darkness of the Night, We Stand Guard</h2>
+        <h2>Where the Unseen Threatens, We Stand Unyielding.</h2>
         <h1>Aberration Research Institute</h1>
         <input type="password" id="password" class="password-input" placeholder="Enter Password">
         <button id="submit-button" class="button" onclick="checkPassword()">Submit</button>
