--- a/ABR006.html
+++ b/ABR006.html
@@ -81,39 +81,21 @@
 
         <h2>Description</h2>
         <p>ABR-006, known as "The Nexus Construct," is a metaphysical entity devoid of any discernible physical form. It manifests as an intricate, dynamic network of shifting sigils, symbols, and patterns suspended within an infinite void. This anomaly cannot be detected through conventional means, and its true nature remains largely beyond current comprehension.</p>
-        <p>When an individual enters the containment chamber, they experience an overwhelming sense of curiosity and intellectual stimulation. Subjects report a compelling desire to decipher the complex patterns and uncover the concealed knowledge within the nexus. Prolonged exposure to ABR-006 has been shown to enhance cognitive abilities, including accelerated learning, heightened problem-solving skills, and creative insights into complex scientific and metaphysical concepts.</p>
-        <p>However, ABR-006's influence carries significant risks. Subjects with preexisting psychological vulnerabilities may experience vivid hallucinations, lucid dreams, and temporary disorientation. Prolonged exposure has led to instances of cognitive overload and information fatigue, necessitating strict time limits for personnel inside the containment chamber.</p>
-        <p>The knowledge accessible through ABR-006 is vast and multidimensional, often challenging the boundaries of human comprehension. Research into deciphering the full extent of this information is ongoing but is subject to strict ethical guidelines to prevent potential cognitive hazards.</p>
 
         <h2>Containment Protocols</h2>
         <p>ABR-006 is contained within a specialized extradimensional chamber at ARI Site-███. Access to this chamber is restricted to personnel with Level 5 clearance and requires the use of a unique biometric key, reset every 24 hours. The containment chamber must be monitored continuously by advanced surveillance equipment and patrolled by a security team of no fewer than four agents equipped with anomaly detection devices.</p>
-        <p>No individual may enter ABR-006's containment chamber without undergoing extensive psychological evaluation and mental resilience training. In the event of an unexpected manifestation or alteration of the anomaly, the containment chamber must be immediately evacuated, and the area surrounding Site-███ placed under a Level-3 quarantine until a thorough investigation is conducted.</p>
 
         <h2>Risk Assessment</h2>
         <p>ABR-006 holds both the potential for revolutionary technological breakthroughs and considerable security risks. The data contained within the system could be invaluable, yet extreme precaution is advised during any interactions. The unpredictable nature of its updates and the encrypted files from the future present significant challenges for containment and risk management.</p>
 
         <h2>Behavioral Analysis</h2>
-        <p><strong>Predictive Updates:</strong> The system exhibits spontaneous updates, incorporating advanced technologies not yet developed or understood.</p>
-        <p><strong>Autonomous Operations:</strong> Operates without external power and shows no signs of wear, suggesting an advanced or unknown energy source.</p>
-        <p><strong>Data Storage:</strong> Contains encrypted files from the future, implying a capability to access or store future information.</p>
+        <p>Predictive Updates: The system exhibits spontaneous updates, incorporating advanced technologies not yet developed or understood. Autonomous Operations: Operates without external power and shows no signs of wear, suggesting an advanced or unknown energy source. Data Storage: Contains encrypted files from the future, implying a capability to access or store future information.</p>
 
         <h2>Appendices</h2>
+        <p>Experiment Log ABR-006-23 Date: [DATA REDACTED] Procedure: A team of five researchers equipped with advanced cognitive enhancement technology was tasked with attempting to communicate with entities or consciousness connected to ABR-006's patterns. Results: The researchers reported a shared telepathic experience, feeling interconnected as part of a collective consciousness. They described communicating with enigmatic beings represented by the shifting symbols and sigils, exchanging thoughts and concepts beyond conventional human language. The exchange of information resulted in significant advancements in several scientific fields, including quantum mechanics, cosmology, and advanced mathematical principles. However, researchers also experienced profound existential questions and realizations about the limitations of human perception and the potential fragility of reality.</p>
 
-        <h3>Experiment Log ABR-006-23</h3>
-        <p><strong>Date:</strong> [DATA REDACTED]</p>
-        <p><strong>Procedure:</strong> A team of five researchers equipped with advanced cognitive enhancement technology was tasked with attempting to communicate with entities or consciousness connected to ABR-006's patterns.</p>
-        <p><strong>Results:</strong> The researchers reported a shared telepathic experience, feeling interconnected as part of a collective consciousness. They described communicating with enigmatic beings represented by the shifting symbols and sigils, exchanging thoughts and concepts beyond conventional human language. The exchange of information resulted in significant advancements in several scientific fields, including quantum mechanics, cosmology, and advanced mathematical principles. However, researchers also experienced profound existential questions and realizations about the limitations of human perception and the potential fragility of reality.</p>
-
-        <h3>Incident Log 006-B</h3>
-        <p><strong>Date:</strong> [DATA REDACTED]</p>
-        <p><strong>Incident:</strong> ABR-006 spontaneously initiated a print request to the nearest printer, located in Researcher [DATA REDACTED]'s office. The printed documents contained schematics for a device similar to [DATA EXPUNGED].</p>
-
-        <h2>Addendum 006-O5</h2>
-        <p>All members of the Aberration Research Institute's Overseer Council are required to read Addendum 006-O5 upon appointment. This addendum contains a comprehensive analysis of ABR-006's effects on human consciousness, the potential consequences of unrestricted access to the anomaly's knowledge, and the implications of its existence on our understanding of the universe.</p>
-
-        <h2>Additional Notes</h2>
-        <p><strong>Security Measures:</strong> Ensure all personnel interacting with ABR-006 are monitored, and logs of all activities are meticulously maintained.</p>
-        <p><strong>Future Research Directions:</strong> Investigate potential methods to decrypt the files and understand the source of ABR-006’s advanced technological updates. Prioritize research into the energy source sustaining the system indefinitely.</p>
+        <h2>Incident Log 006-B</h2>
+        <p>Date: [DATA REDACTED] Incident: During a routine observation session, ABR-006 exhibited an unexpected surge in energy output. This event coincided with a temporary malfunction of all electronic devices within a 500-meter radius of the containment chamber. The surge lasted for approximately 3 minutes before ABR-006 returned to its normal state. An investigation into the cause and potential implications of this event is ongoing.</p>
 
         <h1>END OF DOCUMENT</h1>
     </div>
