--- a/ABR007.html
+++ b/ABR007.html
@@ -75,43 +75,38 @@
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-007</h1>
-        <p><strong>Aberration Designation:</strong> ABR-007</p>
+        <p><strong>Aberration Designation:</strong> ABR-007 Luminous Halo</p>
         <p><strong>Threat Level:</strong> Class II: Controllable</p>
-        <p><strong>Containment Level:</strong> Beta-1</p>
+        <p><strong>Containment Level:</strong> Zeta-1</p>
 
         <h2>Description</h2>
-        <p>ABR-007, referred to as the "Luminous Halo," is an anomalous atmospheric phenomenon identified by the presence of a large, bright neon sky blue ring appearing within cloud formations. The anomaly manifests exclusively in isolated rural regions, avoiding detection in urban environments. It measures approximately 500 meters in diameter and maintains a stationary position at an altitude of 1,000 meters above ground level.</p>
-        <p>First documented by ARI field agents on [DATE] in [LOCATION], [COUNTRY], the anomaly has been consistently described by witnesses as an intense neon blue ring visible during night hours, producing a radiant glow observable from considerable distances.</p>
+        <p>ABR-007, known as the "Luminous Halo," is an anomalous atmospheric phenomenon characterized by a large, bright neon sky blue ring suspended within cloud formations. This ring measures approximately 500 meters in diameter and remains stationary at an altitude of 1,000 meters above ground level. Notably, it exclusively appears in isolated rural regions, avoiding urban environments.</p>
+        <p>First identified on [DATE] in [LOCATION], [COUNTRY], ABR-007 was reported by multiple witnesses who described an intense neon blue ring visible during night hours. ARI field agents confirmed the anomaly's existence and administered amnestic treatments to the witnesses, followed by the dissemination of misinformation to prevent further public inquiries.</p>
 
         <h2>Containment Protocols</h2>
-        <p>1. <strong>Monitoring:</strong> Remote observation stations must be established within a 20-kilometer radius of any reported appearance. These stations are to use encrypted communication channels to prevent unauthorized data access.</p>
-        <p>2. <strong>Psychological Evaluations:</strong> Personnel assigned to observation posts must undergo regular psychological assessments to ensure they can manage the mental impact of witnessing the anomaly.</p>
-        <p>3. <strong>Public Concealment:</strong> In the event of unauthorized civilian exposure, Class-C amnestic treatments are to be administered following established protocols.</p>
-        <p>4. <strong>Misinformation:</strong> If necessary, localized misinformation campaigns will be initiated to obscure public knowledge of ABR-007.</p>
+        <ul>
+            <li>Remote observation stations must be established within a 20-kilometer radius of any reported occurrence of ABR-007. These stations are to record and analyze the phenomenon discreetly.</li>
+            <li>Data collection should utilize encrypted channels to prevent unauthorized access.</li>
+            <li>Personnel at observation posts are required to undergo standard psychological evaluations to ensure their ability to handle the psychological impact of ABR-007.</li>
+            <li>Unauthorized civilian witnesses are to be subjected to Class-C amnestic administration as per protocol.</li>
+        </ul>
 
         <h2>Risk Assessment</h2>
-        <p>ABR-007 is categorized as a Class II - Controllable anomaly, posing minimal direct threat to personnel and the general public. The primary risk associated with ABR-007 involves the potential psychological impact on unprepared individuals and the indirect effects on local weather patterns.</p>
+        <p>ABR-007 presents minimal danger to both personnel and the public. Its presence enhances nocturnal visibility due to its consistent phosphorescent glow. While it has demonstrated the capacity to influence local weather conditions slightly, these effects are not significant enough to pose any substantial threat. The anomaly's preference for isolated rural areas suggests an aversion to densely populated regions, possibly reducing its potential impact on human populations.</p>
 
         <h2>Behavioral Analysis</h2>
-        <p><strong>Appearance:</strong> ABR-007 manifests within cloud formations, remaining stationary for periods ranging from several hours to several days before dissipating without leaving visible residue.</p>
-        <p><strong>Spatial Peculiarity:</strong> It exclusively appears in remote rural regions, suggesting a potential correlation with the lack of significant human settlements.</p>
-        <p><strong>Light Emission:</strong> The neon blue ring emits a constant phosphorescent glow, enhancing nocturnal visibility in its vicinity.</p>
-        <p><strong>Weather Interaction:</strong> The anomaly can mildly influence local weather conditions, affecting cloud density and wind speed, though significant alterations remain unconfirmed.</p>
+        <p>ABR-007's behavior includes maintaining a fixed position within cloud formations for periods ranging from several hours to days before disappearing abruptly without leaving residues or atmospheric disturbances. Researchers hypothesize that the anomaly's avoidance of urban areas might be due to factors such as urban light pollution or other yet-to-be-identified variables.</p>
 
         <h2>Appendices</h2>
-        <p><strong>Researcher Notes:</strong></p>
-        <p>Dr. ███████: "The phenomenon's preference for rural environments over urban areas could be linked to the absence of light pollution or other urban factors. Further investigation is required to identify the underlying cause."</p>
-        <p>Dr. █████: "There is a possibility that ABR-007 is actively avoiding detection. Its intelligence or intentionality is undetermined, and a dedicated research team should explore these aspects and attempt to establish communication if feasible."</p>
-
-        <p><strong>Background:</strong></p>
-        <p>ABR-007 was first reported to ARI following multiple witness accounts in a secluded region of [COUNTRY]. The anomaly's consistent evasion of urban areas has led to various hypotheses regarding its manifestation patterns and underlying mechanisms.</p>
-
-        <p><strong>Incident Reports:</strong></p>
-        <p><strong>Initial Incident:</strong> On [DATE], multiple residents of [LOCATION], [COUNTRY], reported sighting a neon blue ring in the night sky. Field Operations Division operatives confirmed the anomaly and administered amnestics to witnesses.</p>
-        <p><strong>Ongoing Observations:</strong> Regular updates from remote observation stations detail the anomaly's behavior, including its sporadic appearances and interactions with local weather.</p>
-
-        <p><strong>Research:</strong></p>
-        <p>Current research focuses on understanding ABR-007's selective manifestation in rural areas, its potential intelligence, and the extent of its influence on weather patterns. Continued monitoring and data collection are essential for advancing our knowledge of this anomaly.</p>
+        <ul>
+            <li><strong>Research Notes:</strong></li>
+            <li>**Dr. ███████**: "The Luminous Halo phenomenon's selective manifestation in rural environments, avoiding metropolitan areas, indicates a unique behavioral pattern that requires further investigation. Understanding the underlying cause of this selective appearance is crucial."</li>
+            <li>**Dr. █████**: "Considering ABR-007's potential intelligence or intentionality is necessary. A dedicated research team should explore the anomaly's possible motives and, if feasible, establish communication."</li>
+            <li><strong>Observations:</strong></li>
+            <li>**Spatial Peculiarity**: Consistently appears in remote rural regions, never in urban or densely populated areas.</li>
+            <li>**Light Emission**: Emits a radiant neon blue glow, enhancing nocturnal visibility.</li>
+            <li>**Weather Interaction**: Exhibits mild influence on local weather conditions, particularly cloud density and wind speed.</li>
+        </ul>
 
         <h1>END OF DOCUMENT</h1>
     </div>
