--- a/ABR005.html
+++ b/ABR005.html
@@ -75,7 +75,7 @@
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-005</h1>
-        <p><strong>Aberration Designation:</strong> ABR-005</p>
+        <p><strong>Aberration Designation:</strong> ABR-005 "The Embrace of Eudaimonia"</p>
         <p><strong>Threat Level:</strong> Class II: Controllable</p>
         <p><strong>Containment Level:</strong> Beta-2</p>
 
