--- a/ABRlist.html
+++ b/ABRlist.html
@@ -78,8 +78,8 @@
                 <li><a href="ABR004.html">ABR-004 - The Oracle Terminal</a></li>
                 <li><a href="ABR005.html">ABR-005 - The Embrace of Eudaimonia</a></li>
                 <li><a href="ABR006.html">ABR-006 - The Nexus Construct</a></li>
-                <li><a href="ABR007.html">ABR-007 - </a></li>
-                <li><a href="ABR008.html">ABR-008 - </a></li>
+                <li><a href="ABR007.html">ABR-007 - Luminous Halo</a></li>
+                <li><a href="ABR008.html">ABR-008 - Bone Sculptor</a></li>
                 <li><a href="ABR009.html">ABR-009 - </a></li>
                 <li><a href="ABR010.html">ABR-010 - </a></li>
                 <li><a href="ABR011.html">ABR-011 - </a></li>
