--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             font-size: 1em;
             border-radius: 5px;
             border: 1px solid #ccc;
+            background-color: #3a3a3a; /* Match background color */
+            color: #fff; /* White text color for contrast */
         }
     </style>
     <script>
