--- a/ABRlist.html
+++ b/ABRlist.html
@@ -81,7 +81,7 @@
                 <li><a href="ABR007.html">ABR-007 - Luminous Halo</a></li>
                 <li><a href="ABR008.html">ABR-008 - Bone Sculptor</a></li>
                 <li><a href="ABR009.html">ABR-009 - Bobble the Clown</a></li>
-                <li><a href="ABR010.html">ABR-010 - </a></li>
+                <li><a href="ABR010.html">ABR-010 - The Sentinel</a></li>
                 <li><a href="ABR011.html">ABR-011 - </a></li>
                 <li><a href="ABR012.html">ABR-012 - </a></li>
                 <li><a href="ABR013.html">ABR-013 - </a></li>
