--- a/ABR012.html
+++ b/ABR012.html
@@ -27,7 +27,7 @@
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black;
+            color: black.
         }
         .container {
             padding: 20px;
@@ -85,6 +85,7 @@
 
         <h2>Containment Protocols</h2>
         <p>ABR-012 is to be contained in a high-security ammunition locker within Research Site-64. The locker must be constructed with reinforced steel walls and monitored via surveillance cameras. Access to ABR-012 requires Level 4 clearance and explicit authorization from the Site Director. Personnel are prohibited from handling ABR-012 directly without proper authorization.</p>
+        <p>Once fired, ABR-012 is considered expended. However, retrieval of fragments and analysis of impacted materials is critical for ongoing research. Standard retrieval protocols must be enacted to safely collect and store any residual fragments. A specialized containment team equipped with thermal-resistant and EMP-shielded gear must conduct the retrieval to prevent any secondary anomalous effects.</p>
 
         <h2>Risk Assessment</h2>
         <p>ABR-012 poses a significant threat due to its enhanced targeting abilities and extreme thermal output. The potential for collateral damage is high, especially in urban or populated areas. Its ability to penetrate conventional barriers also raises concerns for secure facilities and armored vehicles. The psychological impact on those aware of its capabilities cannot be understated, as the fear of an unstoppable projectile can lead to heightened stress and anxiety.</p>
