--- a/ABRlist.html
+++ b/ABRlist.html
@@ -83,7 +83,7 @@
                 <li><a href="ABR009.html">ABR-009 - Bobble the Clown</a></li>
                 <li><a href="ABR010.html">ABR-010 - The Toothpick</a></li>
                 <li><a href="ABR011.html">ABR-011 - The Sentinel</a></li>
-                <li><a href="ABR012.html">ABR-012 - </a></li>
+                <li><a href="ABR012.html">ABR-012 - Guided Ignition Projectile</a></li>
                 <li><a href="ABR013.html">ABR-013 - </a></li>
                 <li><a href="ABR014.html">ABR-014 - </a></li>
                 <li><a href="ABR015.html">ABR-015 - </a></li>
