--- a/ABR013.html
+++ b/ABR013.html
@@ -74,13 +74,13 @@
     </div>
 
     <div class="container">
-        <h1>ABERRATION DOCUMENT: ABR-013</h1>
-        <p><strong>Aberration Designation:</strong> ABR-013</p>
+        <h1>ABERRATION DOCUMENT: ABR-013 "The Resonant Metronome"</h1>
+        <p><strong>Aberration Designation:</strong> ABR-013 "The Resonant Metronome"</p>
         <p><strong>Threat Level:</strong> Class III: Hazardous</p>
         <p><strong>Containment Level:</strong> Gamma-1</p>
 
         <h2>Description</h2>
-        <p>ABR-013 appears to be an ordinary metronome, standing approximately 24 cm tall, with a polished mahogany casing. It lacks any identifiable manufacturer's mark. ABR-013's anomalous properties manifest when its pendulum begins to swing, which occurs at unpredictable intervals and without any apparent external stimulus.</p>
+        <p>ABR-013, also known as "The Resonant Metronome," appears to be an ordinary metronome, standing approximately 24 cm tall, with a polished mahogany casing. It lacks any identifiable manufacturer's mark. ABR-013's anomalous properties manifest when its pendulum begins to swing, which occurs at unpredictable intervals and without any apparent external stimulus.</p>
         <p>When ABR-013 begins its motion, it generates a rhythmic sound, typical of a metronome, but at an unusually high frequency. This sound wave has the anomalous ability to vibrate and manipulate matter at a molecular level. The strength and effects of the manipulation are proportional to the proximity and duration of exposure to ABR-013.</p>
         <p>The manifestations of ABR-013’s effects include but are not limited to:</p>
         <ul>
