--- a/ABRlist.html
+++ b/ABRlist.html
@@ -85,9 +85,9 @@
                 <li><a href="ABR011.html">ABR-011 - The Sentinel</a></li>
                 <li><a href="ABR012.html">ABR-012 - Guided Ignition Projectile</a></li>
                 <li><a href="ABR013.html">ABR-013 - Resonant Metronome</a></li>
-                <li><a href="ABR014.html">ABR-014 - </a></li>
-                <li><a href="ABR015.html">ABR-015 - </a></li>
-                <li><a href="ABR016.html">ABR-016 - </a></li>
+                <li><a href="ABR014.html">ABR-014 - Echoing Whisperer</a></li>
+                <li><a href="ABR015.html">ABR-015 - Reflective Abyss</a></li>
+                <li><a href="ABR016.html">ABR-016 - Parasitic Chamber</a></li>
                 <li><a href="ABR017.html">ABR-017 - </a></li>
                 <li><a href="ABR018.html">ABR-018 - </a></li>
                 <li><a href="ABR019.html">ABR-019 - </a></li>
