--- a/homepage.html
+++ b/homepage.html
@@ -75,6 +75,7 @@
     <div class="navbar">
         <a href="homepage.html">Home</a>
         <a href="ABRlist.html">Aberration Index</a>
+        <a href="clearanceranklist.html">Clearance Rank List</a>
         <a href="about.html">About</a>
         <a href="#research">Research</a>
         <a href="#contact">Contact</a>
